# 3-python-package-exercise-team-pyday

./: Pipfile  README.md  bulk.md  example.py  projectstructure.md  pyproject.toml  pytest.ini
.github/workflows/: Pipfile  build.yaml
src/: api.py  pyweath.py
src/pyweath/: __main__.py  pyweath.py
tests/: conftest.py  test_api.py  test_pyweath.py  test_weather_api.py
